--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "homepage": "https://tienlewebmaster.github.io/react"
+    "homepage": "https://tienlewebmaster.github.io/my-react"
   },
   "scripts": {
     "start": "react-scripts start",
